--- a/frontend/src/pages/savedPost/SavedPosts.css
+++ b/frontend/src/pages/savedPost/SavedPosts.css
@@ -1,5 +1,4 @@
 .saved-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+     max-width:800px ;
+   margin: 100px auto;
 }
