--- a/frontend/src/pages/post/post.css
+++ b/frontend/src/pages/post/post.css
@@ -2,57 +2,72 @@
     margin:10px 30px;
 }
 .post-card{
-    width:350px;
+    width:500px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    margin:20px 40px;
+    padding:10px 40px;
 }
 .post-profile-details{
 display:flex;
-margin-left:30px;
+/* margin-left:30px; */
 align-items: center;
 }
 .post-profile-details img{
-    width:30px ;
-    height: 30px;
+    width:50px ;
+    height: 50px;
     border-radius: 50%;
-    padding:10px;
     
 }
 .post-user-name{
-    font-size: 20px;
+    font-size: 25px;
+    margin-left:20px;
+    font-weight: bold;
 }
-.post-details{
-   
-}
-.post-text{
-}
+
 .post-caption{
     text-align: left;
     display: block;
-margin-left:30px;
 font-size:18px;
+margin: 5px 0px;
+color:#475569;
 }
 .post-tags{
     display: block;
     text-align: left;
-margin-left:30px;
-padding-top: 5px;
+color:#475569;
+
 padding-bottom: 15px;
 }
 .post-details img{
-    width:300px;
-    height: 200px;
+    width:500px;
+    height: 300px;
     border-radius:10px;
 
 }
 .post-btn{
     display: flex;
     justify-content: space-between;
-margin:0px 30px;
-padding:0 10px;
+
 
 padding-bottom: 15px;
 }
 .btn{
     border:none;
     background-color: transparent;
+}
+
+@media  (max-width:600px) {
+    .feed-post-container{
+    margin:10px 20px;
+
+    }
+    .post-card{
+        width:300px;
+        margin:10px 0px;
+    padding:10px 20px;
+    }
+
+    .post-details img{
+    width:300px;
+    }
 }
