--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -12,7 +12,13 @@
     /* background-color: blue; */
 }
 
-
+.loader-profile{
+    width:100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   
+}
 .user-name{
     text-align: center;
 }
@@ -33,6 +39,7 @@
     width:250px;
     height: 300px;
   padding:10px;
+  cursor: pointer;
 
 }
  .profile-logout-btn , .profile-edit-btn{
@@ -44,6 +51,7 @@
         display: block;
         font-size: 15px;
     }
+
 
 @media  (max-width:600px) {
     .user-details{
