--- a/frontend/src/pages/post/post.css
+++ b/frontend/src/pages/post/post.css
@@ -6,12 +6,33 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     margin:20px 40px;
     padding:10px 40px;
+    position: relative;
+
 }
 .post-profile-details{
 display:flex;
-/* margin-left:30px; */
 align-items: center;
+justify-content: space-between;
+
 }
+.post-profile{
+    display: flex;
+    align-items: center;
+}
+.more-btn{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+
+}
+.more-info{
+    display: flex;
+    flex-direction: column;
+    background-color:blue;
+    padding:10px;
+    margin:10px;
+}
+
 .post-profile-details img{
     width:50px ;
     height: 50px;
