--- a/frontend/src/pages/post/post.css
+++ b/frontend/src/pages/post/post.css
@@ -39,6 +39,7 @@ justify-content: space-between;
     height: 50px;
     border-radius: 50%;
     
+    
 }
 .post-user-name{
     font-size: 25px;
@@ -66,6 +67,10 @@ padding-bottom: 15px;
     border-radius:10px;
 
 }
+.post-details .comment{
+    display: flex;
+    gap: 5px;
+}
 .post-comm{
     font-size: 16px;
 }
@@ -76,6 +81,8 @@ padding-bottom: 15px;
 
 padding-bottom: 15px;
 }
+
+
 .btn{
     border:none;
     background-color: transparent;
